css fix (+1 squashed commit) Squashed commits: [78f2587] fix zoom in image

--- a/app/globals.css
+++ b/app/globals.css
@@ -134,23 +134,25 @@ h1 {
   column-gap: 0.5em;
   column-count: 1;
   padding: 0 1rem;
+  margin-top: -.5rem;
  
   .masonary-item {
     break-inside: avoid;
     width: 100%;
-    margin-bottom: 0.5rem;
-    overflow: hidden;
+
     img{
-      display: block;
+      box-sizing: border-box;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 1.0);
+      display: inline-block;
       width: 100%;
       height: auto;
       border-radius: 4px;
       transition: transform 0.3s ease-in-out;
       will-change: transform;
+      margin-top: .5rem;
+
       &:hover, &:focus{
-        transform: scale(1.03);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        border: 1px solid #ededed;
+        transform: scale(1.33);
         z-index: 1;
         position: relative;
         outline: none;
